# qdu2026_sentry_behavior

./: .gitignore  Project.btproj  README.md
.cache/clangd/index/: bt_action_node.hpp.354B91F80C9573EF.idx  bt_topic_pub_action_node.hpp.F00847B0EB1A8393.idx  bt_topic_pub_node.hpp.D7379052E738D579.idx  calculate_attack_pose.cpp.0EA17856F4B37437.idx  calculate_attack_pose.cpp.4067102FF4F7D514.idx  calculate_attack_pose.hpp.C24DA4AC87434C50.idx  change_pose.cpp.5B086C8883BB82B7.idx  change_pose.hpp.40717738AF84A215.idx  custom_types.hpp.59DB90D7006A1653.idx  is_attacked.cpp.DA18BD6E06878C46.idx  is_attacked.cpp.E8DD5CF9C2B7993B.idx  is_attacked.hpp.5A3CE125FE8168BB.idx  is_detect_enemy.cpp.5E7711D6D70DAEEA.idx  is_detect_enemy.cpp.BD40E3874BB3EEDE.idx  is_detect_enemy.hpp.7947157D84C00DFE.idx  is_game_status.cpp.02A2E91EE98962CC.idx  is_game_status.cpp.AD54B0B3BA47CE8D.idx  is_game_status.hpp.00E56C525DE19EFD.idx  is_rfid_detected.cpp.972F8F65301D89FD.idx  is_rfid_detected.cpp.C22CEE534FD7398A.idx  is_rfid_detected.hpp.B64A4D01ED10985B.idx  is_status_ok.cpp.5E368C5FAE18190B.idx  is_status_ok.cpp.B4394E20AAFD6551.idx  is_status_ok.hpp.521E1E41D44636E4.idx  plugins.hpp.8B623251525B2EA2.idx  plugins.hpp.B476163E9DEECE54.idx  pub_gimbal_absolute.cpp.4FE652D86F1D4F0D.idx  pub_gimbal_absolute.cpp.D0D93FDC4C453195.idx  pub_gimbal_absolute.hpp.35D474A783F00831.idx  pub_gimbal_velocity.cpp.352514E5B6DE5CA7.idx  (+32 more)
src/referee_simulation/: CMakeLists.txt  README.md  package.xml
src/referee_simulation/msg/: OperatingMode.msg  SetPose.msg
src/referee_simulation/src/: referee_simulation_node.cpp
